--- a/rails-angular/public/index.html
+++ b/rails-angular/public/index.html
@@ -13,6 +13,15 @@
   </head>
   <body ng-controller="MainCtrl as main">
 
+    <header>
+      <nav>
+        <ul>
+          <li><a class="navbar-brand" ui-sref="home">Home</a></li>
+          <li><a class="navbar-brand" ui-sref="moviesIndex">Movies</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <main ui-view></main>
 
   </body>
